@@ -32,6 +32,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   options
 * $wgAllowUserCssPrefs option allows disabling CSS-based preferences; which can
   improve page loading speed.
+* Future-proof redirection to fragments in Gecko, so things work a little nicer
+  if they fix <https://bugzilla.mozilla.org/show_bug.cgi?id=516293>.
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive without
